--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -79,17 +79,17 @@
  BAL_nationalism:0 "Deutsch-Baltikum"
  #####################################################################################
  BAV_syndicalism_ADJ:0 "German"
- BAV_syndicalism_DEF:0 "The Bavaria"
- BAV_syndicalism:0 "Bavaria"
+ BAV_syndicalism_DEF:0 "The Bayern"
+ BAV_syndicalism:0 "Bayern"
  BAV_radicalism_ADJ:0 "German"
- BAV_radicalism_DEF:0 "The Bavaria"
- BAV_radicalism:0 "Bavaria"
+ BAV_radicalism_DEF:0 "The Bayern"
+ BAV_radicalism:0 "Bayern"
  BAV_conservatism_ADJ:0 "German"
- BAV_conservatism_DEF:0 "The Bavaria"
- BAV_conservatism:0 "Bavaria"
+ BAV_conservatism_DEF:0 "The Bayern"
+ BAV_conservatism:0 "Bayern"
  BAV_nationalism_ADJ:0 "German"
- BAV_nationalism_DEF:0 "The Bavaria"
- BAV_nationalism:0 "Bavaria"
+ BAV_nationalism_DEF:0 "The Bayern"
+ BAV_nationalism:0 "Bayern"
  #####################################################################################
  BEL_syndicalism_ADJ:0 "Belgian"
  BEL_syndicalism_DEF:0 "The Belgium"
@@ -404,17 +404,17 @@
  GAM_nationalism:0 "Amerikadeutscher Volksbund"
  #####################################################################################
  GER_syndicalism_ADJ:0 "German"
- GER_syndicalism_DEF:0 "The Deutsches Reich"
- GER_syndicalism:0 "Deutsches Reich"
+ GER_syndicalism_DEF:0 "The Preußen"
+ GER_syndicalism:0 "Preußen"
  GER_radicalism_ADJ:0 "German"
- GER_radicalism_DEF:0 "The Deutsches Reich"
- GER_radicalism:0 "Deutsches Reich"
+ GER_radicalism_DEF:0 "The Preußen"
+ GER_radicalism:0 "Preußen"
  GER_conservatism_ADJ:0 "German"
- GER_conservatism_DEF:0 "The Deutsches Reich"
- GER_conservatism:0 "Deutsches Reich"
+ GER_conservatism_DEF:0 "The Preußen"
+ GER_conservatism:0 "Preußen"
  GER_nationalism_ADJ:0 "German"
- GER_nationalism_DEF:0 "The Deutsches Reich"
- GER_nationalism:0 "Deutsches Reich"
+ GER_nationalism_DEF:0 "The Preußen"
+ GER_nationalism:0 "Preußen"
  #####################################################################################
  GRE_syndicalism_ADJ:0 "Greek"
  GRE_syndicalism_DEF:0 "The Hellas"
@@ -780,6 +780,19 @@
  SAU_nationalism_DEF:0 "The Hashemite"
  SAU_nationalism:0 "Hashemite"
  #####################################################################################
+ SAX_syndicalism_ADJ:0 "German"
+ SAX_syndicalism_DEF:0 "The Sachsen"
+ SAX_syndicalism:0 "Sachsen"
+ SAX_radicalism_ADJ:0 "German"
+ SAX_radicalism_DEF:0 "The Sachsen"
+ SAX_radicalism:0 "Sachsen"
+ SAX_conservatism_ADJ:0 "German"
+ SAX_conservatism_DEF:0 "The Sachsen"
+ SAX_conservatism:0 "Sachsen"
+ SAX_nationalism_ADJ:0 "German"
+ SAX_nationalism_DEF:0 "The Sachsen"
+ SAX_nationalism:0 "Sachsen"
+ #####################################################################################
  SER_syndicalism_ADJ:0 "Serbian"
  SER_syndicalism_DEF:0 "The Serbia"
  SER_syndicalism:0 "Serbia"
@@ -987,4 +1000,17 @@
  WAF_nationalism_ADJ:0 "West African"
  WAF_nationalism_DEF:0 "The West Africa"
  WAF_nationalism:0 "West Africa"
+ ##########################################
+ WUR_syndicalism_ADJ:0 "German"
+ WUR_syndicalism_DEF:0 "The Württemberg"
+ WUR_syndicalism:0 "Württemberg"
+ WUR_radicalism_ADJ:0 "German"
+ WUR_radicalism_DEF:0 "The Württemberg"
+ WUR_radicalism:0 "Württemberg"
+ WUR_conservatism_ADJ:0 "German"
+ WUR_conservatism_DEF:0 "The Württemberg"
+ WUR_conservatism:0 "Württemberg"
+ WUR_nationalism_ADJ:0 "German"
+ WUR_nationalism_DEF:0 "The Württemberg"
+ WUR_nationalism:0 "Württemberg"
  ##########################################
