--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -59,8 +59,8 @@
  AUS_radicalism_DEF:0 "The Austria"
  AUS_radicalism:0 "Austria"
  AUS_conservatism_ADJ:0 "Austrian"
- AUS_conservatism_DEF:0 "The Austria"
- AUS_conservatism:0 "Austria"
+ AUS_conservatism_DEF:0 "The Groß-Österreich"
+ AUS_conservatism:0 "Groß-Österreich"
  AUS_nationalism_ADJ:0 "Austrian"
  AUS_nationalism_DEF:0 "The Groß-Österreich"
  AUS_nationalism:0 "Groß-Österreich"
@@ -257,8 +257,8 @@
  CHI_conservatism_DEF:0 "The China"
  CHI_conservatism:0 "China"
  CHI_nationalism_ADJ:0 "Chinese"
- CHI_nationalism_DEF:0 "The China"
- CHI_nationalism:0 "China"
+ CHI_nationalism_DEF:0 "The Chinese People's State"
+ CHI_nationalism:0 "Chinese People's State"
  #####################################################################################
  CHL_syndicalism_ADJ:0 "Chilean"
  CHL_syndicalism_DEF:0 "The Chile"
@@ -715,6 +715,19 @@
  POR_nationalism_DEF:0 "The Portugal"
  POR_nationalism:0 "Portugal"
  #####################################################################################
+ PRC_syndicalism_ADJ:0 "Chinese"
+ PRC_syndicalism_DEF:0 "The Jiangxi Soviet"
+ PRC_syndicalism:0 "Jiangxi Soviet"
+ PRC_radicalism_ADJ:0 "Chinese"
+ PRC_radicalism_DEF:0 "The Jiangxi"
+ PRC_radicalism:0 "Jiangxi"
+ PRC_conservatism_ADJ:0 "Chinese"
+ PRC_conservatism_DEF:0 "The Jiangxi"
+ PRC_conservatism:0 "Jiangxi"
+ PRC_nationalism_ADJ:0 "Chinese"
+ PRC_nationalism_DEF:0 "The Jiangxi"
+ PRC_nationalism:0 "Jiangxi"
+ #####################################################################################
  PRU_syndicalism_ADJ:0 "Peruvian"
  PRU_syndicalism_DEF:0 "The Peru"
  PRU_syndicalism:0 "Peru"
@@ -794,17 +807,17 @@
  SAX_nationalism:0 "Sachsen"
  #####################################################################################
  SER_syndicalism_ADJ:0 "Serbian"
- SER_syndicalism_DEF:0 "The Serbia"
- SER_syndicalism:0 "Serbia"
+ SER_syndicalism_DEF:0 "The Serbia-Montenegro"
+ SER_syndicalism:0 "Serbia-Montenegro"
  SER_radicalism_ADJ:0 "Serbian"
- SER_radicalism_DEF:0 "The Serbia"
- SER_radicalism:0 "Serbia"
+ SER_radicalism_DEF:0 "The Serbia-Montenegro"
+ SER_radicalism:0 "Serbia-Montenegro"
  SER_conservatism_ADJ:0 "Serbian"
- SER_conservatism_DEF:0 "The Serbia"
- SER_conservatism:0 "Serbia"
+ SER_conservatism_DEF:0 "The Serbia-Montenegro"
+ SER_conservatism:0 "Serbia-Montenegro"
  SER_nationalism_ADJ:0 "Serbian"
- SER_nationalism_DEF:0 "The Serbia"
- SER_nationalism:0 "Serbia"
+ SER_nationalism_DEF:0 "The Serbia-Montenegro"
+ SER_nationalism:0 "Serbia-Montenegro"
  #####################################################################################
  SET_syndicalism_ADJ:0 "Italian"
  SET_syndicalism_DEF:0 "The Settentrione"
