--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -43,8 +43,8 @@
  ARG_nationalism_party:0 "LCA"
  ARG_nationalism_party_long:0 "Legión Cívica Argentina"
  #################################
- AST_syndicalism_party:0 "CPA"
- AST_syndicalism_party_long:0 "Communist Party of Australia"
+ AST_syndicalism_party:0 "SPA"
+ AST_syndicalism_party_long:0 "Syndicalist Party of Australia"
  AST_radicalism_party:0 "ALP"
  AST_radicalism_party_long:0 "Australian Labor Party"
  AST_conservatism_party:0 "NP"
@@ -52,8 +52,8 @@
  AST_nationalism_party:0 "NG"
  AST_nationalism_party_long:0 "New Guard"
  #################################
- AUS_syndicalism_party:0 "KPÖ"
- AUS_syndicalism_party_long:0 "Kommunistische Partei Österreichs"
+ AUS_syndicalism_party:0 "SYPÖ"
+ AUS_syndicalism_party_long:0 "Syndikalistische Partei Österreichs"
  AUS_radicalism_party:0 "SPÖ"
  AUS_radicalism_party_long:0 "Sozialdemokratische Partei Österreichs"
  AUS_conservatism_party:0 "CS"
@@ -61,8 +61,8 @@
  AUS_nationalism_party:0 "VF"
  AUS_nationalism_party_long:0 "Vaterländische Front"
  #################################
- BAL_syndicalism_party:0 "LKP"
- BAL_syndicalism_party_long:0 "Latvijas Komunistiskā partija"
+ BAL_syndicalism_party:0 "LSP"
+ BAL_syndicalism_party_long:0 "Latvijas Sindikālistiskā partija"
  BAL_radicalism_party:0 "LSDSP"
  BAL_radicalism_party_long:0 "Latvijas Sociāldemokrātiskā Strādnieku Partija"
  BAL_conservatism_party:0 "ADP"
@@ -70,8 +70,8 @@
  BAL_nationalism_party:0 "PK"
  BAL_nationalism_party_long:0 "Pērkonkrusts"
  #################################
- BAV_syndicalism_party:0 "KPD"
- BAV_syndicalism_party_long:0 "Kommunistische Partei Deutschlands"
+ BAV_syndicalism_party:0 "SYPD"
+ BAV_syndicalism_party_long:0 "Syndikalistische Partei Deutschlands"
  BAV_radicalism_party:0 "SPD"
  BAV_radicalism_party_long:0 "Sozialdemokratische Partei Deutschlands"
  BAV_conservatism_party:0 "BVP"
@@ -88,8 +88,8 @@
  BEL_nationalism_party:0 "PR"
  BEL_nationalism_party_long:0 "Parti Rexiste"
  #################################
- BLR_syndicalism_party:0 "LKP"
- BLR_syndicalism_party_long:0 "Lietuvos komunistų partija"
+ BLR_syndicalism_party:0 "LSP"
+ BLR_syndicalism_party_long:0 "Lietuvos syndikalistų partija"
  BLR_radicalism_party:0 "LSLDP"
  BLR_radicalism_party_long:0 "Lietuvos radicalistų liaudininkų demokratų partija"
  BLR_conservatism_party:0 "LKDP"
@@ -133,8 +133,8 @@
  BUK_nationalism_party:0 "YB"
  BUK_nationalism_party_long:0 "Yosh buxoroliklar"
  #################################
- BUL_syndicalism_party:0 "BKP"
- BUL_syndicalism_party_long:0 "Bâlgarska Komunisticheska Partiya"
+ BUL_syndicalism_party:0 "SKP"
+ BUL_syndicalism_party_long:0 "Bâlgarska Syndikalisticheska Partiya"
  BUL_radicalism_party:0 "DP"
  BUL_radicalism_party_long:0 "Demokraticheska Partiya"
  BUL_conservatism_party:0 "Zveno"
@@ -142,8 +142,8 @@
  BUL_nationalism_party:0 "SBNL"
  BUL_nationalism_party_long:0 "Săjuz na Bălgarskite Nacionalni Legioni"
  #################################
- BUR_syndicalism_party:0 "RFCP"
- BUR_syndicalism_party_long:0 "Red Flag Communist Party"
+ BUR_syndicalism_party:0 "RFSP"
+ BUR_syndicalism_party_long:0 "Red Flag Syndicalist Party"
  BUR_radicalism_party:0 "DAA"
  BUR_radicalism_party_long:0 "Dobama Asiayone"
  BUR_conservatism_party:0 "GCBA"
