--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -215,7 +215,7 @@
  STATE_214:0 "Arkhangelsk"
  STATE_215:0 "Onega"
  STATE_216:0 "Olonets"
- STATE_217:0 "Stalingrad"
+ STATE_217:0 "Tsaritsyn"
  STATE_218:0 "Rostov"
  STATE_219:0 "Moscow"
  STATE_220:0 "Kursk"
@@ -225,7 +225,7 @@
  STATE_224:0 "Bryansk"
  STATE_225:0 "Sumy"
  STATE_226:0 "Dnipropetrovsk"
- STATE_227:0 "Stalino"
+ STATE_227:0 "Yuzovka"
  STATE_228:0 "Voroshilovgrad"
  STATE_229:1 "Azerbaijan"
  STATE_230:0 "Armenia"
@@ -339,7 +339,7 @@
  STATE_338:0 "Gloucestershire"
  STATE_339:0 "Izmir"
  STATE_340:0 "Bursa"
- STATE_341:0 "Istanbul"
+ STATE_341:0 "Constantinople"
  STATE_342:0 "Antalya"
  STATE_343:0 "Afyon"
  STATE_344:0 "Adana"
