--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -106,7 +106,7 @@
  VICTORY_POINTS_9940:0 "Heraklion"
  VICTORY_POINTS_11818:0 "Thessaloniki"
  VICTORY_POINTS_11747:0 "Ankara"
- VICTORY_POINTS_9833:0 "Istanbul"
+ VICTORY_POINTS_9833:0 "Constantinople"
  VICTORY_POINTS_940:0 "Konya"
  VICTORY_POINTS_947:0 "Bursa"
  VICTORY_POINTS_4112:0 "Izmir"
@@ -173,9 +173,9 @@
  VICTORY_POINTS_7394:0 "Cork"
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiev"
- VICTORY_POINTS_3529:0 "Stalingrad"
+ VICTORY_POINTS_3529:0 "Tsaritsyn"
  VICTORY_POINTS_3151:0 "Leningrad"
- VICTORY_POINTS_6474:0 "Stalino"
+ VICTORY_POINTS_6474:0 "Yuzovka"
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:0 "Gorki"
  VICTORY_POINTS_117:0 "Novgorod"
@@ -269,7 +269,7 @@
  VICTORY_POINTS_10438:0 "Nakhon Ratchasima"
  VICTORY_POINTS_4075:0 "Hanoi"
  VICTORY_POINTS_4401:0 "Saigon"
- VICTORY_POINTS_1182:0 "Tokyo"
+ VICTORY_POINTS_1182:0 "Edo"
  VICTORY_POINTS_7072:0 "Osaka"
  VICTORY_POINTS_1025:0 "Kokura"
  VICTORY_POINTS_1092:0 "Hiroshima"
@@ -290,7 +290,7 @@
  VICTORY_POINTS_4572:0 "Hsinking"
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Pusan"
- VICTORY_POINTS_7125:0 "Seoul"
+ VICTORY_POINTS_7125:0 "Hanseong"
  VICTORY_POINTS_7186:0 "Taipei"
  VICTORY_POINTS_10433:0 "Harbin"
  VICTORY_POINTS_11771:0 "Mukden"
@@ -471,7 +471,7 @@
  VICTORY_POINTS_4329:0 "Port Moresby"
  VICTORY_POINTS_2489:0 "Truk"
  VICTORY_POINTS_4357:0 "North Palau"
- VICTORY_POINTS_7251:0 "Rabaul"
+ VICTORY_POINTS_7251:0 "Simpsonhafen"
  VICTORY_POINTS_7302:0 "Suva"
  VICTORY_POINTS_12140:0 "Guam"
  VICTORY_POINTS_12237:0 "Lae"
@@ -574,3 +574,6 @@
  VICTORY_POINTS_11752:0 "Zhangbei"
  VICTORY_POINTS_7418:0 "Xi'an"
  VICTORY_POINTS_4879:0 "Windhoek"
+ VICTORY_POINTS_9522:0 "Aachen"
+ VICTORY_POINTS_10470:0 "Bukhara"
+ VICTORY_POINTS_7199:0 "Ruijin"
