--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -97,6 +97,15 @@
  BLR_nationalism_party:0 "LTS"
  BLR_nationalism_party_long:0 "Lietuvių tautininkų sąjunga"
  #################################
+ BOH_syndicalism_party:0 "SSČ"
+ BOH_syndicalism_party_long:0 "Syndikalistická strana Česka"
+ BOH_radicalism_party:0 "ČSSD"
+ BOH_radicalism_party_long:0 "Česká strana sociálně demokratická"
+ BOH_conservatism_party:0 "ČND"
+ BOH_conservatism_party_long:0 "Česka národní demokracie"
+ BOH_nationalism_party:0 "NOF"
+ BOH_nationalism_party_long:0 "Národní obec fašistická"
+ #################################
  BOL_syndicalism_party:0 "FSTMB"
  BOL_syndicalism_party_long:0 "Federación Sindical de Trabajadores Mineros de Bolivia"
  BOL_radicalism_party:0 "PL"
@@ -160,14 +169,14 @@
  CAF_nationalism_party:0 "DAP"
  CAF_nationalism_party_long:0 "Deutsche Afrikanische Partei"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ CAN_syndicalism_party:0 "OBU"
+ CAN_syndicalism_party_long:0 "One Big Union"
+ CAN_radicalism_party:0 "LPC"
+ CAN_radicalism_party_long:0 "Liberal Party of Canada"
+ CAN_conservatism_party:0 "UP"
+ CAN_conservatism_party_long:0 "Unionist Party"
+ CAN_nationalism_party:0 "PNSC"
+ CAN_nationalism_party_long:0 "Parti National Social Chrétien"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
